# emergent

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: CMakeLists.txt
cmake/projects/emergent/: CMakeLists.txt
docs/api-reference/: Doxyfile
examples/: example-application.cpp  example-application.hpp  hello-world-example.cpp  hello-world-example.hpp
include/emergent/: configuration.hpp.in  emergent.hpp  template.hpp
include/emergent/animation/: animation-channel.hpp  animation-clip.hpp  animation.hpp
include/emergent/behavior/: action-node.hpp  composite-node.hpp  conditional-node.hpp  counter-node.hpp  decorator-node.hpp  exit-status.hpp  inverter-node.hpp  loop-node.hpp  node.hpp  parallel-node.hpp  selector-node.hpp  sequence-node.hpp  timer-node.hpp
include/emergent/entity/: component-manager.hpp  component-observer.hpp  component.hpp  entity-context.hpp  entity-id-pool.hpp  entity-id.hpp  entity-manager.hpp
include/emergent/font/: font-loader.hpp  font-metrics.hpp  font.hpp  glyph-metrics.hpp  glyph.hpp  kerning-table.hpp  texture-atlas.hpp  unicode-range.hpp
include/emergent/geometry/: aabb.hpp  bounding-volume.hpp  convex-hull.hpp  octree.hpp  plane.hpp  ray.hpp  rect.hpp  sphere.hpp  split-view-frustum.hpp  view-frustum.hpp  winged-edge.hpp
include/emergent/graphics/: ambient-light.hpp  animation-channel.hpp  animation.hpp  billboard.hpp  bind-pose.hpp  bone.hpp  camera.hpp  gl3w.hpp  key-frame.hpp  light.hpp  material.hpp  model-instance.hpp  model.hpp  pose.hpp  renderer.hpp  scene-layer.hpp  scene-object.hpp  scene.hpp  shader-input.hpp  shader-loader.hpp  shader-parameter-set.hpp  shader-parameter.hpp  shader-variable.hpp  shader.hpp  skeleton.hpp  stb-image.hpp  texture-2d.hpp  texture-cube.hpp  texture-loader.hpp  texture.hpp  vertex-format.hpp
include/emergent/input/: arcball.hpp  clipboard.hpp  control-binder.hpp  control-profile.hpp  control.hpp  gamepad.hpp  input-device.hpp  input-event.hpp  (+5 more)
modules/: CMakeLists.txt
modules/emergent/: CMakeLists.txt
modules/emergent/cmake/: emergent-config.cmake.in
modules/emergent/docs/: Doxyfile.in  concepts.md  style-guide.md
modules/emergent/include/emergent/: configuration.hpp.in  emergent.hpp
modules/emergent/include/emergent/animation/: animation-channel.hpp  animation-clip.hpp  animation.hpp  animator.hpp  step-interpolator.hpp  tween.hpp
modules/emergent/include/emergent/font/: font-loader.hpp  font-metrics.hpp  font.hpp  glyph-metrics.hpp  glyph.hpp  kerning-table.hpp  texture-atlas.hpp  texture-packer.hpp  typeface.hpp  unicode-range.hpp
modules/emergent/include/emergent/geometry/: aabb.hpp  bounding-volume.hpp  convex-hull.hpp  octree.hpp  plane.hpp  ray.hpp  rect.hpp  sphere.hpp  split-view-frustum.hpp  triangle-mesh.hpp  view-frustum.hpp
modules/emergent/include/emergent/graphics/: ambient-light.hpp  billboard.hpp  bind-pose.hpp  bone.hpp  camera.hpp  gl3w.hpp  light.hpp  material.hpp  model-instance.hpp  model.hpp  pose.hpp  renderer.hpp  scene-layer.hpp  scene-object.hpp  scene.hpp  shader-input.hpp  shader-variable.hpp  shader.hpp  skeleton.hpp  texture-2d.hpp  texture-cube.hpp  texture-loader.hpp  vertex-format.hpp
modules/emergent/include/emergent/input/: arcball.hpp  control-binder.hpp  control-profile.hpp  control-set.hpp  control.hpp  gamepad.hpp  input-device.hpp  input-event.hpp  input-mapper.hpp  input-mapping.hpp  input-router.hpp  keyboard.hpp  mouse.hpp  scancode.hpp
modules/emergent/include/emergent/math/: angles.hpp  constants.hpp  easings.hpp  fundamental-matrix-types.hpp  fundamental-vector-types.hpp  glm.hpp  hash.hpp  interpolation.hpp  math.hpp  matrix-math.hpp  matrix-operations.hpp  matrix-type.hpp  matrix-types.hpp  matrix-vector-operations.hpp  quaternion-operations.hpp  quaternion-type.hpp  quaternion-vector-operations.hpp  swizzle.hpp  transform-types.hpp  transform.hpp  triangle-types.hpp  trigonometry.hpp  types.hpp  vector-math.hpp  vector-operations.hpp  vector-type.hpp  vector-types.hpp
modules/emergent/include/emergent/utility/: application.hpp  device-manager.hpp  event-dispatcher.hpp  event-handler.hpp  event.hpp  os-interface.hpp  parameter-dict.hpp  performance-sampler.hpp  step-scheduler.hpp  timer.hpp  tween.hpp  unicode.hpp
modules/emergent/include/emergent/window/: display.hpp  window-manager.hpp  window.hpp
modules/emergent/src/emergent/: template.cpp  template.hpp
modules/emergent/src/emergent/animation/: animation.cpp  animator.cpp  step-interpolator.cpp
modules/emergent/src/emergent/font/: font.cpp  texture-atlas.cpp  texture-packer.cpp  typeface.cpp  unicode-range.cpp
modules/emergent/src/emergent/geometry/: aabb.cpp  bounding-volume.cpp  convex-hull.cpp  plane.cpp  ray.cpp  sphere.cpp  split-view-frustum.cpp  triangle-mesh.cpp  view-frustum.cpp  winged-edge.cpp
modules/emergent/src/emergent/graphics/: ambient-light.cpp  billboard.cpp  bind-pose.cpp  bone.cpp  camera.cpp  light.cpp  material.cpp  model-instance.cpp  model.cpp  pose.cpp  renderer.cpp  scene-layer.cpp  scene-object.cpp  scene.cpp  shader-input.cpp  shader-variable.cpp  shader.cpp  skeleton.cpp  texture-2d.cpp  texture-cube.cpp  texture-loader.cpp
modules/emergent/src/emergent/input/: arcball.cpp  control-binder.cpp  control-profile.cpp  control-set.cpp  control.cpp  gamepad.cpp  input-device.cpp  input-event.cpp  input-mapper.cpp  input-mapping.cpp  input-router.cpp  keyboard.cpp  mouse.cpp
modules/emergent/src/emergent/math/: interpolation.cpp  math.cpp  transform.cpp
modules/emergent/src/emergent/utility/: application.cpp  device-manager.cpp  event-dispatcher.cpp  os-interface.cpp  parameter-dict.cpp  performance-sampler.cpp  sdl-interface.cpp  sdl-interface.hpp  step-interpolator.cpp  step-scheduler.cpp  timer.cpp  unicode.cpp
modules/emergent/src/emergent/window/: display.cpp  window-manager.cpp  window.cpp
modules/emergent/src/examples/: example-application.cpp  example-application.hpp  hello-world-example.cpp  hello-world-example.hpp
modules/emergent/src/gl3w/src/: gl3w.c  test.c
src/examples/: hello-world-example.cpp
(+97 files in other folders)
